# daily-fortune

./: .gitignore  README.md  pyproject.toml
daily_fortune/: #words.csv#  .#words.csv  __init__.py  tell_fortune.py  words.csv
