[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily_fortune"
version = "0.1.0"
description = "A simple package to generate daily fortune"
authors = [
    {name = "yl", email = "yjlinotlazy@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pandas",
]
[project.scripts]
daily_fortune = "daily_fortune.tell_fortune:main"

[tool.setuptools.package-data]
daily_fortune = ["daily_fortune/*", "*"]

[project.urls]
"Homepage" = "https://github.com/yjlinotlazy/daily-fortune"